# Seqalgo

./: .gitignore  CMakeLists.txt
seqalgo/: alphabet.h  char_alphabet.h  ialphabet.h  sequence.h  sequence_iterator.h
test/: CMakeLists.txt  test_sequence_iterator.cpp
